# fontconfig-ultimate

./: 01-configure.patch  02-ftoption.h.patch  03-aflatin.c.patch  04-ftlcdfil.c.patch  05-ftobjs.c.patch  06-ftoutln.c.patch  07-ftsynth.c.patch  08-ftsmooth.c.patch  09-ttinterp.c.patch  10-aflatin.h.patch  CHANGELOG  PKGBUILD  README.md  README.pod  README.rst  fontconfig-iu.install  fontconfig_upstream_revised.patch  ftsmooth-2.5.4.patch  infinality-settings.sh  license  upstream-2014.08.28.patch
01_freetype2-iu/: 0001-Enable-table-validation-modules.patch  0005-freetype-2.5.2-more-demos.patch  02-upstream-2015.08.24.patch  02-upstream-2015.09.17.patch  02-upstream-2016.04.16.patch  03-infinality-2.6-2015.09.17.patch  03-infinality-2.6.3-2016.03.26.patch  03-infinality-2.6.3-2016.04.16.patch  03-upstream-2014.12.17.patch  CHANGELOG  PKGBUILD  fix_segfault_with_harfbuzz.diff  freetype2.sh  infinality-2.5.3-2014.07.28.patch  infinality-2.5.3-2014.08.25.patch  infinality-2.5.3.patch  infinality-settings.sh  infinality.install  infinality.installe  upstream-15.05.2014.patch  upstream-2014.07.28.patch  upstream-2014.09.14.patch
01_freetype2-iu-2.5.0.1-5/: PKGBUILD
01_freetype2-iu-2.5.0.1-7/: PKGBUILD
01_freetype2-iu-2.5.0.1-8/: PKGBUILD  freetype-2.4.12-pkgconfig.patch  infinality-settings.sh
01_freetype2-iu-2.5.1-2/: PKGBUILD  freetype-2.5.1-pkgconfig.patch
01_freetype2-iu-2.5.2-2/: PKGBUILD  infinality-settings.sh
01_freetype2-iu-2.5.2-3/: PKGBUILD  infinality-2.5.2.patch
01_lib32-freetype2-iu/: 0002-Enable-subpixel-rendering.patch  0003-Enable-infinality-subpixel-hinting.patch  02-upstream-2015.03.30.patch  02-upstream-2015.04.26.patch  02-upstream-2015.05.12.patch  02-upstream-2015.09.15.patch  02-upstream-2015.09.30.patch  02-upstream-2015.10.04.patch  02-upstream-2015.11.08.patch  02-upstream-2015.12.05.patch  03-infinality-2.5.5-2015.04.26.patch  03-infinality-2.6.1-2015.11.08.patch  03-infinality-2.6.2-2015.11.28.patch  03-infinality-2.6.3-2016.03.26.patch  03-upstream-2014.12.07.patch  PKGBUILD  freetype-2.5.3-enable-valid.patch  freetype-2.5.3-pkgconfig.patch  infinality-2.5.3-2014.07.07.patch  infinality-2.5.3.patch  upstream-2014.07.07.patch  upstream-2014.08.08.patch
01_lib32-freetype2-iu-2.5.0.1-4/: PKGBUILD
01_lib32-freetype2-iu-2.5.0.1-5/: PKGBUILD
01_lib32-freetype2-iu-2.5.0.1-6/: PKGBUILD  autofit.patch  infinality-2.5.patch
01_lib32-freetype2-iu-2.5.2-2/: PKGBUILD
02_fontconfig-iu/: 01-configure.patch  CHANGELOG  PKGBUILD  fc-cache-ib.hook  fontconfig-ultimate.install  fontconfig-ultimate.installe
02_fontconfig-iu-2.10.95-2/: CHANGELOG  PKGBUILD  fontconfig-ultimate.install
02_fontconfig-iu-2.10.95-3.1/: PKGBUILD
02_fontconfig-iu-2.10.95-3.2/: CHANGELOG  PKGBUILD
02_fontconfig-iu-2.11.0-10/: PKGBUILD
02_fontconfig-iu-2.11.0-14/: CHANGELOG  PKGBUILD
02_fontconfig-iu-2.11.0-15/: PKGBUILD
02_fontconfig-iu-2.11.0-3/: CHANGELOG  PKGBUILD  fontconfig-ultimate.install
02_fontconfig-iu-2.11.0-4/: PKGBUILD  fontconfig-ultimate.install
02_fontconfig-iu-2.11.0-5/: PKGBUILD
02_fontconfig-iu-2.11.0-6/: PKGBUILD
02_fontconfig-iu-2.11.0-8/: PKGBUILD
02_fontconfig-iu-2.11.0-9/: CHANGELOG  PKGBUILD
02_fontconfig-iu-comp/: PKGBUILD  fontconfig-ultimate-comp.tar.gz.sig
02_lib32-fontconfig-iu/: PKGBUILD  fc-cache.c.patch  lib32-fontconfig.installe
02_lib32-fontconfig-iu-2.10.95-2.1/: PKGBUILD
02_lib32-fontconfig-iu-2.11.0-2/: PKGBUILD  lib32-fontconfig.install
02_lib32-fontconfig-iu-2.11.0-3/: PKGBUILD
03_cairo-iu/: CHANGELOG  PKGBUILD  cairo-1.12.8-expose_snapshot-1.patch  cairo-color-glyphs.patch  cairo-respect-fontconfig_pb.patch  cairo-server-side-gradients.patch  cairo-webkit-html5-fix.patch
03_cairo-iu-1.12.16-2/: PKGBUILD
03_lib32-cairo-iu/: PKGBUILD  cairo-1.12.16-lto-optional.patch  cairo-make-lcdfilter-default.patch
03_lib32-cairo-iu-1.12.16-2/: PKGBUILD
03_lib32-cairo-iu-1.12.16-3/: PKGBUILD  cairo-respect-fontconfig.patch
03_lib32-cairo-iu-1.12.16-4/: PKGBUILD
04_java8-openjdk/: 003_nonreparenting-wm.patch  004_add-fontconfig.patch  006_fix-typographical-point-size.diff  007_lcd-hrgb-by-default.diff  PKGBUILD  install_jdk8-openjdk.sh  install_jre8-openjdk-headless.sh
1-dejavu-ib/: 90-tt-dejavu.conf  PKGBUILD
1_alegreya-fonts-ibx/: 90-non-tt-alegreya-sans.conf  90-non-tt-alegreya.conf  PKGBUILD  otf-alegreya-ibx.install
1_andada-ibx/: PKGBUILD
1_bh-ib/: 45-luxi.conf
1_dejavu-ib/: 90-non-tt-dejavu.conf  t1-dejavu-ib.install
1_droid-ib/: 90-tt-droid.conf  PKGBUILD  ttf-droid-ib.install  ttf-droid-ib.installe  ttf-droid-nonlatin-ib.install  ttf-droid-nonlatin-ib.installe
1_ebgaramond-ibx/: 90-tt-ebgaramond.conf  PKGBUILD  (+2 more)
conf.d.infinality/: 10-base-rendering.conf  28-user.conf  30-metric-aliases.conf  35-droid-sans-group.conf  35-repl-custom.conf  36-repl-missing-glyphs.conf  37-repl-global.conf  37-repl-webfonts.conf  38-repl-proggy-bitmap.conf  38-repl-terminus-bitmap.conf  38-repl-tt-traced-bitmap.conf  38-repl-webfonts-custom.conf  39-repl-corrective.conf  40-non-latin-microsoft.conf  40-non-latin-misc.conf  40-non-latin.conf  40-nonlatin.conf  45-latin-microsoft.conf  45-latin-misc.conf  45-latin.conf  50-user.conf  60-latin.conf  65-non-latin.conf  66-aliases-wine.conf  67-override-aliases.conf  68-override.conf  82-no-embedded-bitmaps.conf  83-yes-bitmaps.conf  88-forced-synthetic.conf  89-non-tt-rendering-qt.conf  90-non-tt-fonts-qt.conf  90-non-tt-fonts.conf  90-tt-fonts-microsoft.conf  90-tt-fonts-misc.conf  90-tt-fonts.conf  91-no-qt-subpixel-positioning.conf  92-selective-rendering-microsoft.conf  92-selective-rendering-misc.conf  92-selective-rendering.conf  93-final-lang-spec.conf  (+8 more)
conf.d.infinality/custom/: 30-metric-aliases-custom.conf  37-repl-global-custom.conf  60-latin-custom.conf  65-non-latin-custom.conf  93-final-lang-spec-custom.conf
conf.d.infinality/free/: 30-metric-aliases-free.conf  37-repl-global-free.conf  60-latin-free.conf  65-non-latin-free.conf
conf.d.infinality/ftypes/: 90-ttf-helvetica-neue.conf
conf.d.infinality/ms/: 37-repl-global-ms.conf
(+1307 files in other folders)
